# feishu-sdk

./: .gitignore  Cargo.toml  README.md
docs/: BEST_PRACTICES.md  USAGE.md
examples/: approval_v4.rs  bitable_v1.rs  calendar_v4.rs  docx_v1.rs  drive_v1_file.rs  im_v1_message.rs  sheets_v3.rs
src/: card_builder.rs  client.rs  lib.rs
src/api/: approval_v4.rs  calendar_v4_calendar.rs  cardkit.rs  drive_v1_file.rs  ext.rs  im_v1_message.rs  mod.rs  service_wrappers.rs
src/card/: handler.rs
src/core/: client.rs  config.rs
src/event/: dispatcher.rs
src/event/models/: acs.rs  apaas.rs  compensation.rs  corehr.rs  ext.rs  helpdesk.rs  hire.rs  mail.rs  meeting_room.rs  mod.rs  moments.rs  payroll.rs  performance.rs  security_and_compliance.rs  task.rs  vc.rs
